--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,15 +50,13 @@ jobs:
 
     # Step 2: Set up SSH for deployment (e.g., to a remote server)
     - name: Set up SSH
-      uses: appleboy/ssh-action@v0.1.0
+      uses: appleboy/ssh-action@v0.1.10
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.SSH_USER }}
-        key: ${{ secrets.SSH_PUBLIC_KEY }}
+        key: ${{ secrets.SSH_KEY }}
         port: ${{ secrets.SSH_PORT }}
         script: |
-          cd /path/to/your/project/directory
-          git pull origin main  # Pull latest changes
-          docker-compose down  # Stop running containers
-          docker-compose up -d  # Start containers in detached mode
-          debug: true
+          echo "Nice Job!!!"
+          
+          
