--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,67 +7,35 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
-
-    steps:
-    # Step 1: Checkout the repository
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    # Step 2: Set up Docker Buildx (for building Docker images)
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    # Step 3: Log in to Docker Hub (Replace with your Docker Hub credentials)
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    # Step 4: Install Docker Compose
-    - name: Install Docker Compose
-      run: |
-        sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-        sudo chmod +x /usr/local/bin/docker-compose
-        docker-compose --version  # Verify installation
-
-    # Step 5: Build and push Docker images
-    - name: Build and push Docker images
-      run: |
-        docker-compose -f docker-compose.yml build
-        docker-compose -f docker-compose.yml push
-
   deploy:
     runs-on: ubuntu-latest
-    needs: build  # Make sure the build job completes first
 
     steps:
     # Step 1: Checkout the repository again for deployment tasks
     - name: Checkout code
       uses: actions/checkout@v2
 
-    # Step 2: Set up SSH for deployment (e.g., to a remote server)
-    - name: Set up SSH
+    # Step 2: Set up SSH for deployment (e.g., to a remote EC2 server)
+    - name: Set up SSH and deploy to EC2
       uses: appleboy/ssh-action@v0.1.10
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.SSH_USER }}
-        key: ${{ secrets.KEY }}
-        port: ${{ secrets.SSH_PORT }}
+        host: ${{ secrets.HOST }}  # EC2 public IP or DNS name
+        username: ${{ secrets.SSH_USER }}  # SSH user (e.g., 'ubuntu')
+        key: ${{ secrets.KEY }}  # SSH private key (ensure it's base64 encoded if required)
+        port: ${{ secrets.SSH_PORT }}  # Default is 22 for EC2 instances
         script: |
-          echo "Nice Job!!!"
-          cd nodejs-app
+          echo "SSH into EC2 Instance Successful"
+          
+          # Navigate to the project directory on the EC2 instance
+          cd /path/to/your/nodejs-app  # Update with the correct path to your app on the EC2
+
           # Stop and remove all running containers
           echo "Stopping and removing all containers..."
           docker stop $(docker ps -aq) || true
           docker rm $(docker ps -aq) || true
+
+          # Start the Docker containers using Docker Compose
           echo "Starting Docker containers with Docker Compose..."
           docker-compose up -d
-          echo "Deployment complete!"
-          
 
-        
-          
-          
+          echo "Deployment complete!"
