--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,17 +25,41 @@ jobs:
         port: ${{ secrets.SSH_PORT }}  # Default is 22 for EC2 instances
         script: |
           echo "SSH into EC2 Instance Successful"
-          
-          # Navigate to the project directory on the EC2 instance
-          cd nodejs-app  # Update with the correct path to your app on the EC2
 
-          # Stop and remove all running containers
+          # Navigate to the EC2 home directory
+          cd /home/ubuntu  # Or your user's home directory if different
+
+          # Remove the existing nodejs-app directory (if it exists)
+          echo "Removing existing nodejs-app directory..."
+          sudo rm -rf nodejs-app || true
+
+          # Create a new nodejs-app directory and navigate into it
+          echo "Creating and navigating into nodejs-app directory..."
+          sudo mkdir nodejs-app
+          cd nodejs-app
+
+          # Copy the Dockerfile, docker-compose.yml, and index.js to nodejs-app directory
+          echo "Copying Dockerfile, docker-compose.yml, and index.js to the current directory..."
+          sudo cp $GITHUB_WORKSPACE/Dockerfile ./Dockerfile
+          sudo cp $GITHUB_WORKSPACE/docker-compose.yml ./docker-compose.yml
+          sudo cp $GITHUB_WORKSPACE/index.js ./index.js  # Copy index.js
+
+          # Navigate back to the home directory to copy nginx.conf
+          cd ..
+          echo "Copying nginx.conf to /etc/nginx/nginx.conf..."
+          sudo mkdir -p /etc/nginx  # Ensure the directory exists
+          sudo cp $GITHUB_WORKSPACE/nginx.conf /etc/nginx/nginx.conf
+
+          # Navigate back to the nodejs-app directory
+          cd nodejs-app
+
+          # Stop and remove any running containers (if any)
           echo "Stopping and removing all containers..."
-          docker stop $(docker ps -aq) || true
-          docker rm $(docker ps -aq) || true
+          sudo docker stop $(docker ps -aq) || true
+          sudo docker rm $(docker ps -aq) || true
 
           # Start the Docker containers using Docker Compose
           echo "Starting Docker containers with Docker Compose..."
-          docker-compose up -d
+          sudo docker-compose up -d
 
           echo "Deployment complete!"
